Add canonical link to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo3-140x92.png" type="image/x-icon">
   <meta name="description" content="Welcome to Abhay Katre's portfolio. Professional web developer specializing in HTML, CSS, Java programming, SQL database management, video editing, and multimedia production in Nagpur, Maharashtra.">
-  
+  <link rel="canonical" href="https://abhaykatre70.github.io/Portfolio-Mobirise/">
+
   
   <title>Abhay Katre - Web Developer | Java Programmer | Multimedia Creator</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
